replaced AbstractRow and AbstractSheet method returns with type that the compiler can implicitly downcast to the child type (simpler code and easier fluent method chaining); AbstractRow and AbstractSheet made abstract; some stream-code added; jacoco lib upgraded to latest version (works with Java-17)